--- a/portfolio.html
+++ b/portfolio.html
@@ -245,10 +245,10 @@
   <main>
     <header>
       <div class="back-link">
-        <a href="index.html">← back to home</a>
-        <a href="https://instagram.com/design.c0l" target="_blank">instagram</a>
-        <a href="link" target="_blank">shop</a>
-        <a href="mailto:coldoggo@gmail.com">get in touch!</a>
+        <a href="index.html">← back to home |</a>
+        <a href="https://instagram.com/design.c0l" target="_blank"> instagram |</a>
+        <a href="link" target="_blank"> shop |</a>
+        <a href="mailto:coldoggo@gmail.com"> get in touch!</a>
       </div>
 
       <h1>portfolio</h1>
@@ -263,7 +263,7 @@
           <img src="images/birdy_watch.JPG" />
           <figcaption class="art-caption">
             <span class="art-title">“birdwatching”</span>
-            <span class="art-meta">digital illustration, print ✶ 2025</span>
+            <span class="art-meta">digital illustration ✶ 2025</span>
           </figcaption>
         </figure>
 
@@ -281,7 +281,7 @@
           <img src="images/dogy.JPG" />
           <figcaption class="art-caption">
             <span class="art-title">“puppy”</span>
-            <span class="art-meta">digital illustration, print ✶ 2025</span>
+            <span class="art-meta">digital illustration ✶ 2025</span>
           </figcaption>
         </figure>
 
