--- a/about.html
+++ b/about.html
@@ -210,11 +210,12 @@
         go unnoticed, like architecutural grotesques and wildflowers.
       </p>
       <p>
-       colin is also simply the most handsome boy in existence and the best boyfriend everin the whole world. factually
-      </p>
-      <p>
         i did the illustration for visual novel <a href="https://paranoidhawk.itch.io/lookouts" data-preview="lookouts" target="_blank" rel="noopener">Lookouts</a> 
         and the graphic design for yearly charity magazine <a href="https://garfieldzine.bigcartel.com/products" data-preview="garfzine" target="_blank" rel="noopener">Garfzine.</a>
+      </p>
+        <p>
+          <b>testimonials</b>
+      "colin is also simply the most handsome boy in existence and the best boyfriend everin the whole world. factually" - unbiased yves
       </p>
     </div>
 
