--- a/about.html
+++ b/about.html
@@ -215,7 +215,19 @@
       </p>
         <p>
           <b>testimonials</b>
-      "colin is also simply the most handsome boy in existence and the best boyfriend everin the whole world. factually" - unbiased yves
+        <p>
+      <p>
+      "colin is also simply the most handsome boy in existence and the best boyfriend everin the whole world. factually" - yves <3
+      </p>
+      <p>
+        "colin is living inside my walls and i cant get him out. 
+        he says the graphic design of the insulation is something hes never seen before 
+        and hes going to keep studying it for a while. sometimes maltesers fall out of the power outlets. 
+        he does give good art advice but i dont know if thats enough to justify the whole in my walls thing." 
+        - a concerned garfzine resident
+      </p>
+      <p>
+        "the greatest artist to have ever lived" - god
       </p>
     </div>
 
