--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 }
 
 .brand-logo{
-  width: 140px;        /* adjust if needed */
+  width: 240px;        /* adjust if needed */
   max-width: 60%;
   height: auto;
   display: block;
@@ -176,21 +176,23 @@
   <!-- scrolling background (only shown on "my work" hover) -->
 <div class="bg-reel" aria-hidden="true">
   <div class="reel">
-    <img src="images/crimbo.jpg" alt="">
-    <img src="images/birdy_watch.jpg" alt="">
-    <img src="images/dogy.jpg" alt="">
-    <img src="images/wulf.jpg" alt="">
-    <img src="images/ecosse.jpg" alt="">
-    <img src="images/patches.jpg" alt="">
+    <img src="images/chrimbo.JPG" alt="">
+    <img src="images/birdy_watch.JPG" alt="">
+    <img src="images/dogy.JPG" alt="">
+    <img src="images/wulf.JPG" alt="">
+    <img src="images/ecosse.JPG" alt="">
+    <img src="images/patches.JPG" alt="">
 
-    <img src="images/crimbo.jpg" alt="">
-    <img src="images/birdy_watch.jpg" alt="">
-    <img src="images/dogy.jpg" alt="">
-    <img src="images/wulf.jpg" alt="">
-    <img src="images/ecosse.jpg" alt="">
-    <img src="images/patches.jpg" alt="">
+    <!-- duplicate for seamless loop -->
+    <img src="images/chrimbo.JPG" alt="">
+    <img src="images/birdy_watch.JPG" alt="">
+    <img src="images/dogy.JPG" alt="">
+    <img src="images/wulf.JPG" alt="">
+    <img src="images/ecosse.JPG" alt="">
+    <img src="images/patches.JPG" alt="">
   </div>
 </div>
+
 
   <main>
     <div class="layout">
