--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
     content:"";
     position:absolute;
     inset:0;
-    background: rgba(244,244,237,0.75); /* same vibe as #F4F4ED */
+    background: rgba(244,244,237,0.6);
   }
   
 .reel{
@@ -123,7 +123,7 @@
   display: flex;
   gap: 24px;
   padding: 0 24px;
-  opacity: 0.25;
+  opacity: 0.34;
   width: max-content;          /* THIS IS THE FIX */
   animation: scroll 25s linear infinite;
   will-change: transform;
